<resources>
    <string name="app_name">测力环手机版</string>
    <string name="buttonZero">清零</string>
    <string name="textViewDynamometerDisplay">0.00N</string>
    <string name="textviewMSG">准备就绪</string>
    <string name="textview">TextView</string>
    <string name="channel">通道选择</string>
    <string name="connect">开始链接</string>
    <string name="textViewDynamo">力值</string>
    <string name="companyTitle">内部流转测试，商用侵权！</string>
</resources>
